--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,14 @@
 <!--<h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>-->
-<h1>Cucushift Validator</h1>
+<h1><%= @title %></h1>
+<p>Your code: <%= @val_code %> </p>
 
+<%= form_tag :action => 'home' do %>
+
+   <p>Enter your name: </p>
+
+   <%= text_area_tag 'user_code', @val_code %>
+
+   <%= submit_tag 'Validate' %>
+
+<% end %>
