--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,3 +12,9 @@
    <%= submit_tag 'Validate' %>
 
 <% end %>
+
+<ul>
+	<% @regexes.each do |regex| %>
+		<li><%= regex.name %></li>
+	<% end %>
+</ul>
