--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,9 +13,11 @@
 
 <% end %>
 
-<h1><%=	@result %></h1>
+<%= for @result.each do |iter|%>
+	<h1><%=	iter %></h1>
+<% end %>
 
-
+<h1><%= @debug_x %></h1>
 <!--if post ...
 
 @result.each do |r|
