--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,7 +17,7 @@
    <h1><%= iter %></h1>
 <% end %>
 
-<h1><%= @debug_x %></h1>
+<!--<h1><%= @debug_x %></h1>-->
 <!--if post ...
 
 @result.each do |r|
