--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
 <head>
   <title>RailsApp</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
+  <%= stylesheet_link_tag    "jquery-linedtextarea" %>
+  <%= javascript_include_tag "application" %>i
+  <%= javascript_include_tag "jquery-linedtextarea" %>
   <%= csrf_meta_tags %>
   <style>
 	#user_code {
