--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,12 @@
 <!--<h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>-->
+
+<script>
+$(function() {
+	$("#user_code").linedtextarea();
+});
+</script>
+
 <h1><%= @title %></h1>
 <p>Your code: <%= @val_code %> </p>
 
