--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,6 +18,8 @@ $(function() {
 
 <% end %>
 
+<ul>
 <%= @result.each do |iter| %>
-   <h1><%= iter %></h1>
+   <li><%= iter %></li>
 <% end %>
+</ul>
