--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,6 +4,7 @@
 <script>
 $(function() {
 	$("#user_code").linedtextarea();
+	$("zebra_table").linedtextarea();
 });
 </script>
 
@@ -18,8 +19,10 @@ $(function() {
 
 <% end %>
 
-<ul>
-<%= @result.each do |iter| %>
-   <li><%= iter %></li>
-<% end %>
-</ul>
+<div id="zebra_table">
+	<ul>
+	<%= @result.each do |iter| %>
+		<li><%= iter %></li>
+	<% end %>
+	</ul>
+</div><~-- end zebra_table -->
