--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 <script>
 $(function() {
 	$("#user_code").linedtextarea();
-	$("zebra_table").linedtextarea();
+	$("#zebra_table").linedtextarea();
 });
 </script>
 
@@ -25,4 +25,4 @@ $(function() {
 		<li><%= iter %></li>
 	<% end %>
 	</ul>
-</div><~-- end zebra_table -->
+</div><!-- end zebra_table -->
