--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,10 @@
 	  height: 300px;
 	  width: 900px;
 	}
+	#zebra_table {
+	  font-family: monospace; 
+	  font-size: 13.3333px;
+	}
       html {
         background: black;
       }
