--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,9 +20,7 @@ $(function() {
 <% end %>
 
 <div id="zebra_table">
-	<ul>
 	<%= @result.each do |iter| %>
-		<li><%= iter %></li>
+		<%= iter %>
 	<% end %>
-	</ul>
 </div><!-- end zebra_table -->
