--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,6 +21,6 @@ $(function() {
 
 <div id="zebra_table">
 	<%= @result.each do |iter| %>
-		<%= iter %>
+		<%= iter %><br />
 	<% end %>
 </div><!-- end zebra_table -->
