--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@ $(function() {
 
 <div id="zebra_table">
 	<table class="stripeMe">
-	<%= @result.each do |iter| %>
+	<% @result.each do |iter| %>
 		<tr><td><%= iter %></td></tr>
 	<% end %>
 	</table>
