--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,17 @@
 	#zebra_table {
 	  font-family: monospace; 
 	  font-size: 13.3333px;
+	  margin-top: 50px;
+	}
+	#zebra_table td {
+	  padding: 6px 11px;
+	  border-bottom: 1px solid #95bce2;
+	}
+	#zebra_table tr.alt td {
+	  background: #ecf6fc;
+	}
+	#zebra_table tr.over td {
+	  background: #bcd4ec;
 	}
       html {
         background: black;
