--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
 	  width: 900px;
 	}
 	#zebra_table {
+	  background: white;
+          color: black;
 	  font-family: monospace; 
 	  font-size: 13.3333px;
 	  margin-top: 50px;
