--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -34,7 +34,9 @@ $(function() {
 	<% @result.each_pair do |key, value| %>
 	<!--If the variable contains 'true,' text color -> green. else, red. -->
 		<%if value %>
-			<tr><td style="color: green"> <%= value %> </td></tr>
+			<tr><td style="color: green"> <%= @result2[key] %> </td></tr>
+		<% else %>
+			<tr><td style="color: red"> <%= @result2[key] %> </td></tr>
 		<% end %>
 	<% end %>
 	</table>
