--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,7 +19,7 @@ $(function() {
 </script>
 
 <h1><%= @title %></h1>
-<p>Your code: <%= @val_code %> </p>
+<p>Your code: </p>
 
 <%= form_tag :action => 'home' do %>
 
