--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -42,5 +42,5 @@ $(function() {
 	</table>
 </div><!-- end zebra_table -->
 <div id="db_version">
-	<%= @dbv %>
+	<p>Current database version: <%= @dbv %></p>
 </div>
