--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,6 +98,11 @@
         -moz-border-radius: 1em;
         border-radius: 1em;
         color: #9cf;
+	 white-space: pre-wrap;       
+	 white-space: -moz-pre-wrap;  
+	 white-space: -pre-wrap;      
+	 white-space: -o-pre-wrap;    
+ 	 word-wrap: break-word;       
       }
 
       ul {
