--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -43,4 +43,5 @@ $(function() {
 </div><!-- end zebra_table -->
 <div id="db_version">
 	<p>Current database version: <%= @dbv %></p>
+	<a href="/pages/instructions">Instructions on how to update the database</a>
 </div>
