--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -3,7 +3,7 @@
 
 <table>
 <tr><th>Step name</td><th>number of steps used</th></tr>
-<%=  @db_for_stats.each do |item| %>
+<%  @db_for_stats.each do |item| %>
   <tr><td><%= item[:re_value] %></td><td></td></tr>
-<%= end %>
+<% end %>
 </table>
