--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,7 @@
+<head>
+  <title><%= @title %></title>
+</head>
+<body>
 <!--<h1>Pages#home</h1>
 <p>Find me in app/views/pages/home.html.erb</p>-->
 
@@ -45,3 +49,4 @@ $(function() {
 	<p>Current database version: <%= @dbv %></p>
 	<a href="/pages/instructions">Instructions on how to update the database</a>
 </div>
+</body>
