--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,5 +1,8 @@
-<p>Status stuff goes here</p>
+<head>
+  <title><%= @title %></title>
+</head>
 
+<h1>Status of steps</h1>
 
 <table>
 <tr><th>Step name</td><th>number of steps used</th><th>rubular</th></tr>
