--- a/app/views/pages/push.html.erb
+++ b/app/views/pages/push.html.erb
@@ -1,1 +1,10 @@
 <p>Push stuff goes here</p>
+
+
+<%= form_tag({:action => :upload}, :multipart => true) do %>
+  <%= file_field_tag 'sql_gz' %>
+<% end %>
+   
+<%= form_for @person do |f| %>
+  <%= f.file_field :sql_gz %>
+<% end %>
