--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -5,8 +5,9 @@
 <h1>Status of Cucushift steps</h1>
 
 <ul>
-  <li>All: <%= @all_steps %>
+  <li>All defined: <%= @db_for_stats.length %>
   <li>Implemented: <%= @to_be_implemented %>
+  <li>All used: <%= @db_for_stats.length %>
 </ul>
 
 <table>
