--- a/app/views/pages/push.html.erb
+++ b/app/views/pages/push.html.erb
@@ -5,6 +5,6 @@
   <%= file_field_tag 'sql_gz' %>
 <% end %>
    
-<%= form_for @person do |f| %>
+<%= form_for @sql_import do |f| %>
   <%= f.file_field :sql_gz %>
 <% end %>
