--- a/app/views/pages/push.html.erb
+++ b/app/views/pages/push.html.erb
@@ -1,6 +1,6 @@
 <p>Push stuff goes here</p>
 
-<%= form_tag({:action => :upload}, :multipart => true) do %>
+<%= form_tag({:action => :push}, :multipart => true) do %>
   <%= file_field_tag 'sql_gz' %>
 <% end %>
    
