Cleaned up the routes page, added a submit button to the file upload form.

--- a/app/views/pages/push.html.erb
+++ b/app/views/pages/push.html.erb
@@ -2,6 +2,7 @@
 
 <%= form_tag({:action => :push}, :multipart => true) do %>
   <%= file_field_tag 'sql_gz' %>
+  <%= submit_tag "Upload" %>
 <% end %>
    
 <= form_for @sql_import do |f| %>
