Added debug info.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -23,6 +23,7 @@ $(function() {
 </script>
 
 <h1><%= @title %></h1>
+<p>Error: <%= @error_message  %></p>
 <p>Your code: </p>
 
 <%= form_tag :action => 'home' do %>
