--- a/app/views/pages/push.html.erb
+++ b/app/views/pages/push.html.erb
@@ -1,5 +1,7 @@
 <p>Push stuff goes here</p>
 
+<p>Error: <%= @error_message  %></p>
+
 <%= form_tag({:action => :push}, :multipart => true) do %>
   <%= file_field_tag 'sql_gz' %>
   <br />
