Added debug info.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,6 +24,7 @@ $(function() {
 
 <h1><%= @title %></h1>
 <p>Error: <%= @error_message  %></p>
+<p>file: <%= @path_for_file %></p>
 <p>Your code: </p>
 
 <%= form_tag :action => 'home' do %>
