--- a/app/views/pages/push.html.erb
+++ b/app/views/pages/push.html.erb
@@ -3,8 +3,12 @@
 <p>Error: <%= @error_message  %></p>
 <p>file: <%= @path_for_file %></p>
 
-<%= form_tag({:action => :push}, :multipart => true) do %>
-  <%= file_field_tag 'sql_gz' %>
+<% form_tag({:action => :push}, :multipart => true) do %>
+  <% file_field_tag 'sql_gz' %>
   <br />
-  <%= submit_tag "Upload" %>
+  <% submit_tag "Upload" %>
+<% end %>
+
+<%= form_for @upload do |f| %>
+  <%= f.file_field :sql_gz %>
 <% end %>
