--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,5 +1,6 @@
 <head>
   <title><%= @title %></title>
+  <script src="//yandex.st/dojo/1.8.3/dojo/dojo.js"></script>
 </head>
 
 <h1>Status of Cucushift steps</h1>
