--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RailsApp</title>
+  <title><%= @title %></title>
+  <script src="//yandex.st/dojo/1.8.3/dojo/dojo.js"></script>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+
 
   <%= javascript_include_tag "jquery-linedtextarea"  %>
   <%= stylesheet_link_tag "jquery-linedtextarea" %>
