--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -1,14 +1,11 @@
-<head>
-  <title><%= @title %></title>
-  <script src="//yandex.st/dojo/1.8.3/dojo/dojo.js"></script>
-</head>
 
 <h1>Status of Cucushift steps</h1>
 
+<h2>Statistics</h2>
 <ul>
-  <li>All defined: <%= @db_for_stats.length %>
-  <li>Implemented: <%= @to_be_implemented %>
-  <li>All used: <%= @db_for_stats.length %>
+  <li>All defined steps: <%= @db_for_stats.length %>
+  <li>All Implemented: <%= @to_be_implemented %>
+  <li>All used steps: <%= @db_for_stats.length %>
 </ul>
 
 <table>
@@ -17,3 +14,38 @@
   <tr><td><%= item[:re_value] %></td><td><a href="TODO"> item[:re_used_times]</a> </td><td><a href="http://rubular.com/?regex=<%= item[:re_value] %>">rubular</a></td></tr>
 <% end %>
 </table>
+
+<div id="gridContainer4" style="width: 400px; height: 200px;"></div>
+
+<script>
+dojo.require("dojox.grid.DataGrid");
+dojo.require("dojox.data.CsvStore");
+
+dojo.ready(function(){
+
+  // our test data store for this example:
+  var store4 = new dojox.data.CsvStore({ url: '{{dataUrl}}dojox/grid/tests/support/movies.csv' });
+
+  // set the layout structure:
+  var layout4 = [
+      { field: 'Title', name: 'Title of Movie', width: '200px' },
+      { field: 'Year', name: 'Year', width: '50px' },
+      { field: 'Producer', name: 'Producer', width: 'auto' }
+      ];
+
+  // create a new grid:
+  var grid4 = new dojox.grid.DataGrid({
+    query: { Title: '*' },
+    store: store4,
+    clientSort: true,
+    rowSelector: '20px',
+    structure: layout4
+    }, document.createElement('div'));
+
+  // append the new grid to the div "gridContainer4":
+  dojo.byId("gridContainer4").appendChild(grid4.domNode);
+
+  // Call startup, in order to render the grid:
+  grid4.startup();
+});
+</script>
