Hiding the second upload field.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,9 @@
 	#zebra_table tr.over td {
 	  background: #bcd4ec;
 	}
+	#json_upload {
+	  display: none;
+	}
       html {
         background: black;
       }
