Adding jquery-ui for tabs.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
 
-
+  <%= javascript_include_tag "jquery-ui" %>
   <%= javascript_include_tag "jquery-linedtextarea"  %>
   <%= stylesheet_link_tag "jquery-linedtextarea" %>
 
