Added tabs styling.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
 <head>
   <title><%= @title %></title>
   <script src="//yandex.st/dojo/1.8.3/dojo/dojo.js"></script>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
+  <%= stylesheet_link_tag    "application", :media => "all" %>`
   <%= javascript_include_tag "application" %>
-
+  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
   <%= javascript_include_tag "jquery" %>
   <%= javascript_include_tag "jquery-ui" %>
   <%= javascript_include_tag "jquery-linedtextarea"  %>
