--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -12,6 +12,7 @@
 		<li><a href="#tabs-3">Aenean lacinia</a></li>
 	</ul>
 </div><!--end tabs -->
+<div id="tabs-1">
 <h2>Statistics</h2>
 <ul>
   <li>All defined steps: <%= @db_for_stats.length %>
@@ -25,7 +26,10 @@
   <tr><td><%= item[:re_value] %></td><td><a href="TODO"> item[:re_used_times]</a> </td><td><a href="http://rubular.com/?regex=<%= item[:re_value] %>">rubular</a></td></tr>
 <% end %>
 </table>
-
+</div><!-- end tabs-1 -->
+<div id="tabs-2">
+	<p>Other stuff.</p>
+</div>
 <div id="gridContainer4" style="width: 400px; height: 200px;"></div>
 
 <script>
