Changed tab names.

--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -2,9 +2,9 @@
 
 <div id="tabs">
 	 <ul>
-		<li><a href="#tabs-1">Nunc tincidunt</a></li>
-		<li><a href="#tabs-2">Proin dolor</a></li>
-		<li><a href="#tabs-3">Aenean lacinia</a></li>
+		<li><a href="#tabs-1">Statistics</a></li>
+		<li><a href="#tabs-2">Dry-Run</a></li>
+		<li><a href="#tabs-3">Other Stuff</a></li>
 	</ul>
 <div id="tabs-1">
 	<h2>Statistics</h2>
