Added styling to the zebra table.

--- a/app/views/pages/status.html.erb
+++ b/app/views/pages/status.html.erb
@@ -13,13 +13,14 @@
 		  <li>All Implemented: <%= @to_be_implemented %>
 		  <li>All used steps: <%= @db_for_stats.length %>
 	</ul>
-
+	<div id="zebra_table">
 	<table class="stripeMe">
 		<tr><th>Step name</td><th>number of steps used</th><th>rubular</th></tr>
 		<%  @db_for_stats.each do |item| %>
 		  <tr><td><%= item[:re_value] %></td><td><a href="TODO"> item[:re_used_times]</a> </td><td><a href="http://rubular.com/?regex=<%= item[:re_value] %>">rubular</a></td></tr>
 		<% end %>
 	</table>
+	</div><!-- end zebra_table -->
 </div><!-- end tabs-1 -->
 
 <div id="tabs-2">
